--- a/css/styles.css
+++ b/css/styles.css
@@ -444,7 +444,8 @@ section {
 
 .section-title .subtitle {
   display: block;
-  font-size: 1.125rem;
+  font-size: 0.28125rem; /* 25% of 1.125rem */
+  line-height: 1.2;
   font-weight: 500;
   margin-bottom: var(--spacing-xs);
   text-transform: uppercase;
